[package]
name = "redox_liner"
version = "0.5.1" # remember to update README
authors = [
    "MovingtoMars <definitelynotliam@gmail.com>",
    "Michael Aaron Murphy <mmstickman@gmail.com>",
    "AdminXVII <dev.xlheureux@gmail.com>",
    "Jeremy Soller <jackpot51@gmail.com>",
]
description = "A library offering readline-like functionality."
repository = "https://gitlab.redox-os.org/redox-os/liner"
homepage = "https://gitlab.redox-os.org/redox-os/liner"
keywords = ["readline", "line", "input", "editor", "completion"]
license = "MIT"
exclude = [
    "CONTRIBUTING.md",
    ".travis.yml",
]
edition = "2018"

[lib]
name = "liner"

[dependencies]
bytecount = "0.6.0"
termion = "1.5.4"
unicode-width = "0.1.6"
itertools = "0.8.2"
strip-ansi-escapes = "0.1.0"

[dev-dependencies]
regex = "1.3.1"
