[package]
name = "liner"
version = "0.5.0" # remember to update README
authors = ["MovingtoMars <definitelynotliam@gmail.com>"]
description = "A library offering readline-like functionality."
repository = "https://gitlab.redox-os.org/redox-os/liner"
homepage = "https://gitlab.redox-os.org/redox-os/liner"
keywords = ["readline", "line", "input", "editor", "completion"]
license = "MIT"
exclude = [
    "CONTRIBUTING.md",
    ".travis.yml",
]
edition = "2018"

[lib]
name = "liner"

[dependencies]
bytecount = "0.6.*"
termion = { git = "https://gitlab.redox-os.org/redox-os/termion" }
unicode-width = "0.1.*"

[dev-dependencies]
regex = "1.0.0"
