[package]
name = "sl-liner"
version = "0.7.0"
authors = [
    "MovingtoMars <definitelynotliam@gmail.com>",
    "Michael Aaron Murphy <mmstickman@gmail.com>",
    "AdminXVII <dev.xlheureux@gmail.com>",
    "Jeremy Soller <jackpot51@gmail.com>",
    "gpwclark",
    "sstanfield",
]
description = "A library offering readline-like functionality."
repository = "https://github.com/sl-sh-dev/sl-liner"
homepage = "https://github.com/sl-sh-dev/sl-liner"
keywords = ["readline", "line", "input", "editor", "completion"]
license = "MIT"
exclude = [
    "CONTRIBUTING.md",
    ".travis.yml",
]
edition = "2018"

[lib]
name = "sl_liner"

[dependencies]
bytecount = "0.6.0"
sl-console = { git = "https://github.com/sl-sh-dev/sl-console.git" }
#sl-console = { path = "../sl-console" }
unicode-width = "0.1.6"
unicode-segmentation = "1.8.0"

[dev-dependencies]
regex = "1.3.1"
